# Formal-Languages-and-Compiler-Design

./: README.md
Lab 1a/: p1.cat  p1err.cat  p2.cat  p3.cat
Lab 1b/: Lexic.txt  Syntax.in  token.in
Lab 2/: Lab 2.docx
Lab 2/SymbolTableLab2/: SymbolTableLab2.sln
Lab 2/SymbolTableLab2/SymbolTableLab2/: HashTable.h  HashTable_old.h  SymbolTable.h  SymbolTableLab2.vcxproj  SymbolTableLab2.vcxproj.filters  main.cpp
Lab 3/Scanner/: Scanner.sln
Lab 3/Scanner/Scanner/: Scanner.cpp  Scanner.h  Scanner.vcxproj  main.cpp
Lab 3/Scanner/Scanner/output/: p1PIF.out  p1ST.out  p2PIF.out  p2ST.out  p3PIF.out  p3ST.out
Lab 4/FiniteAutomata/: FiniteAutomata.sln
Lab 4/FiniteAutomata/FiniteAutomata/: FiniteAutomata.h  FiniteAutomata.vcxproj  FiniteAutomata.vcxproj.filters  main.cpp
Lab 4/FiniteAutomata/FiniteAutomata/input/: FAchar_constant.in  FAidentifier.in  FAint_constant.in  FAstring_constant.in
Lab 5/parser/input/: g1.in  g2.in
Lab 5/parser/src/: errors.rs  main.rs
Lab 5/parser/src/errors/: grammar_error.rs
Lab 5/parser/src/models/: grammar.rs  parser.rs
Lab 5/parser/src/utils/: utils.rs
Lab 5/parser/src/view/: menu.rs
Lab 5/parser_old/src/view/: menu.rs
Lab 6/parser/src/: lib.rs  main.rs
Lab 6/parser/src/models/: parser.rs
Lab 7/parser/: Cargo.toml
Lab 8/: Lexic.txt  lex.yy.c  p1.out  p1err.out  p3.out  scanner.lxi
Lab 8/in/: p1.cat  p1err.cat  p2.cat  p3.cat
Lab 9/: cat.c  cat.h  cat.lxi  cat.tab.c  cat.tab.h  cat.y  lex.yy.c  parser.y  scanner.lxi  yacc
Lab 9/in/: p1.cat  p1err.cat  p2.cat  p3.cat
