[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash_map = {path = "../hash-map", package = "hash-map"}
scanner = {path = "../scanner", package = "scanner"}
utils = {path = "../utils", package = "utils"}
lazy_static = "1.4.0"
